<?xml version="1.0" encoding="utf-8"?>
<resources>
  <!-- Manifest strings -->
  <string name="app_name">PhotoCatalog</string>
  <string name="debug">Debug</string>
  <string name="logging_service">Logging Service</string>
  <string name="gps_list">GPS Log</string>

  <!-- Main Activity -->
  <string name="hello">Hello, PhotoCataloger!</string>
  <string name="track_format">Track: %1$s</string>
  <string name="status_update">Status Update</string>
  <string name="gps_location">GPS Location</string>
  <string name="delete_uploaded_gps">Delete Uploaded GPS</string>
  <string name="upload_once">Upload Once</string>
  <string name="delete_all_my_gps">Delete All My GPS</string>
  <string name="start">Start</string>
  <string name="stop">Stop</string>
  <string name="gps_idle">GPS Idle</string>
  <string name="gps_waiting_for_fix">GPS waiting for fix</string>

  <!-- Main Menu -->
  <string name="new_track">New Track</string>
  <string name="edit_track">Edit Track</string>
  <string name="continuous_record">Continuous Record</string>
  <string name="manage_tracks">Select/Manage Tracks</string>
  <string name="settings">Settings</string>
  <string name="quit">Quit</string>
  <string name="kill">Kill</string>

  <!-- Location Provider -->
  <string name="lp_available">Tracking...</string>
  <string name="lp_out_of_service">GPS Out of Service</string>
  <string name="lp_temporarily_unavailable">GPS Unavailable</string>

  <!-- Location fields -->
  <string name="date_time">Date/Time</string>
  <string name="latitude">Latitude</string>
  <string name="longitude">Longitude</string>
  <string name="altitude">Altitude</string>
  <string name="accuracy">Accuracy</string>
  <string name="bearing">Bearing</string>
  <string name="speed">Speed</string>
  <string name="satellites">Satellites</string>

  <!-- GPS List Activity -->
  <string name="no_gps">No GPS Coordinates Logged</string>
  <string name="delete_all">Delete All</string>
  <string name="delete_uploaded">Delete Uploaded</string>

  <!-- Track Edit and List Activities -->
  <string name="comment">Comment</string>
  <string name="track_name">Track Name</string>
  <string name="track_type">Track Type</string>
  <string name="walking_driving">walking, driving, hiking, etc.</string>
  <string name="num_points">%1$d points</string>
  <string name="no_tracks_listed">No tracks created yet!</string>
  <string name="delete">Delete</string>
  <string name="select">Select</string>
  <string name="save">Export</string>
  <string name="map_view">Map View</string>
  <string name="view_map">View Map</string>
  <string name="map_mode">Map Mode</string>
  <string name="center_map">Center Map</string>

  <!-- First time use dialog -->
  <string name="first_time_title">First Time</string>
  <string name="first_time">This app is a fully functional GPS logger.  It can operate stand-alone and export logs as GPX, but it\'s specifically designed to work with PhotoCatalog.\n\n<b>Please</b> see http://code.google.com/p/photocatalog/.</string>
  <string name="dont_show_again">Don\'t show this again</string>
  <string name="ok">OK</string>
  <string name="visit_website">Visit Website</string>

  <!-- Upload Activity -->
  <string name="add_image">Add Image</string>
  <string name="title">Title</string>
  <string name="description">Description</string>
  <string name="caption">Caption</string>
  <string name="upload">Upload</string>
  <string name="preview_not_supported_for_multi">Preview not supported for multiple images.\n</string>

  <!-- Export Activity -->
  <string name="filename">Filename:</string>
  <string name="save_as_gpx">Save as GPX</string>
  <string name="save_as_kml">Save as KML</string>
  <string name="save_as_csv">Save as CSV</string>

  <!-- Preferences -->
  <string name="general_preferences">General Preferences</string>
  <string name="start_on_boot">Start on Boot</string>
  <string name="start_on_boot_on">PhotoCatalog will start logging GPS on boot.</string>
  <string name="start_on_boot_off">PhotoCatalog will not run on boot.</string>
  <string name="start_on_launch">Auto Start</string>
  <string name="start_on_launch_on">Start GPS logger when app is started from launcher.</string>
  <string name="start_on_launch_off">Just start app, but not logging service.</string>
  <string name="photocatalog_integration">PhotoCatalog Integration</string>
  <string name="photocatalog_integration_on">PhotoCatalog will integrate with online service.</string>
  <string name="photocatalog_integration_off">PhotoCatalog will operate standalone only.</string>
  <string name="automatically_upload">Automatically Upload</string>
  <string name="automatically_upload_on">Automatically upload GPS log while logging data.</string>
  <string name="automatically_upload_off">PhotoCatalog will not upload GPS log.</string>
  <string name="website">Website</string>
  <string name="website_summary">URL for uploading data to.</string>
  <string name="gps_source">GPS Source</string>
  <string name="gps_source_summary">ID of GPS Source to report.</string>
  <string name="other_preferences">Other Preferences</string>
  <string name="sms_activation">SMS Activation</string>
  <string name="sms_activation_on">PhotoCatalog will allow SMS activation.</string>
  <string name="sms_activation_off">PhotoCatalog will not allow SMS activation.</string>
  <string name="sms_activation_code">SMS Activation Code</string>
  <string name="sms_activation_code_summary">Use this code in SMS messages to activate PhotoCatalog.</string>
  <string name="edit_details_at_start">Edit Details at Start</string>
  <string name="edit_details_at_start_on">Open the edit track details screen when starting new track.</string>
  <string name="edit_details_at_start_off">Start new track but edit details later.</string>

  <!-- Display Preferences -->
  <string name="display_preferences">Display Preferences</string>
  <string name="display_preferences_summary">Settings that affect display output only.</string>
  <string name="units_for_display">Display Units</string>
  <string name="units_for_display_summary">Units for screen display.</string>
  <!-- This must match the values in res/values/units.xml -->
  <string-array name="unit_names">
    <item>Nautical</item>
    <item>Metric</item>
    <item>Statute</item>
  </string-array>
  <string name="display_first_fix">Show time to first fix</string>
  <string name="display_first_fix_on">Show a notification of the time to first fix.</string>
  <string name="display_first_fix_off">No notification of time to first fix will be shown.</string>

  <!-- GPS Parameter Preferences -->
  <string name="gps_parameters">GPS Parameters</string>
  <string name="gps_parameters_summary">Various parameters for controlling what are acceptable points for logging GPS data.</string>
  <string name="minimum_distance">Minimum Distance</string>
  <string name="minimum_distance_summary">Minimum distance traversed (in meters) before another point is recorded.</string>
  <string name="minimum_time">Minimum Time</string>
  <string name="minimum_time_summary">Minimum time (in seconds) before another point is recorded.</string>
  <string name="minimum_accoracy">Minimum Accuracy</string>
  <string name="minimum_accoracy_summary">Minimum accuracy (maximum distance in meters) for a GPS fix to be recorded.</string>
  <string name="skip_samples">Skip Samples</string>
  <string name="skip_samples_summary">Skip the first few GPS samples at the start of a log.</string>
  <string name="filter_distance">Filter by distance</string>
  <string name="filter_distance_on">Distant points will be dropped.</string>
  <string name="filter_distance_off">All points logged regardless of distance between them.</string>

  <!-- Personal Information Preferences -->
  <string name="personal_information">Personal Information</string>
  <string name="enable_acra">Enable Crash Reporting</string>
  <string name="enable_acra_on">You will be given an option to send a crash report.</string>
  <string name="enable_acra_off">Crash reports will never be sent.</string>
  <string name="enable_analytics">Enable Analytics Tracking</string>
  <string name="enable_analytics_on">Anonymous usage statistics may be uploaded.</string>
  <string name="enable_analytics_off">No usage statistics will be uploaded.</string>

  <!-- Crash Report Preferences -->
  <string name="acra_preferences">Crash Report Preferences</string>
  <string name="acra_preferences_summary">Details to include in crash reports.</string>
  <string name="acra_syslog">System Log</string>
  <string name="acra_syslog_on">Send a copy of system log on crash.</string>
  <string name="acra_syslog_off">System log will not be read.</string>
  <string name="acra_deviceid">Send Device ID</string>
  <string name="acra_deviceid_on">A unique identifier will be sent with the crash report.</string>
  <string name="acra_deviceid_off">No unique device identified will be sent.</string>
  <string name="acra_user_email">User Email</string>
  <string name="acra_user_email_summary">If you would like feedback on a crash, enter your Email Address.</string>
  <string name="acra_alwaysaccept">Auto-Submit Report</string>
  <string name="acra_alwaysaccept_on">Crash reports will automatically be submitted.</string>
  <string name="acra_alwaysaccept_off">User must manually submit crash reports.</string>

  <!-- ACRA strings -->
  <string name="crash_toast_text">Sorry, but PhotoCatalog has unexpectedly crashed!  A crash report is being generated...</string>
  <string name="crash_notif_ticker_text">Unexpected error, please send a report...</string>
  <string name="crash_notif_title">PhotoCatalog has crashed...</string>
  <string name="crash_notif_text">Please click here to help fix the issue.</string>

  <string name="crash_dialog_title">PhotoCatalog has crashed</string>
  <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Please help us fix this by sending us error data,
    all you have to do is click \'OK\'.</string>
  <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
  <string name="crash_dialog_ok_toast">Thank you!</string>
</resources>
