<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">
<LinearLayout
  android:layout_height="wrap_content" android:orientation="vertical" android:layout_width="fill_parent">
  <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:enabled="true" android:text="@string/track_name"/><EditText android:layout_height="wrap_content" android:id="@+id/name" android:layout_width="fill_parent" android:contentDescription="@string/track_name"/>
  <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:enabled="true" android:text="@string/comment"/><EditText android:layout_height="wrap_content" android:id="@+id/name" android:layout_width="fill_parent" android:contentDescription="@string/comment"/>
  <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:enabled="true" android:text="@string/track_type"/><EditText android:layout_height="wrap_content" android:id="@+id/name" android:layout_width="fill_parent" android:contentDescription="@string/walking_driving"/>
  <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/description"/><EditText android:layout_height="wrap_content" android:id="@+id/description" android:minLines="4" android:layout_width="fill_parent"/>
</LinearLayout>
</ScrollView>
