<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_width="fill_parent" android:layout_height="wrap_content">
  <LinearLayout
   android:layout_width="fill_parent" android:layout_height="wrap_content"
   android:orientation="vertical">
    <ImageView
     android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:id="@+id/image" android:src="@drawable/icon"
     android:adjustViewBounds="true"/>
    <TextView
     android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:text="@string/title"/>
    <EditText
     android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:id="@+id/title" android:hint="@string/caption"/>
    <TextView
     android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:text="@string/description"/>
    <EditText
     android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:id="@+id/description" android:minLines="4"/>
    <TextView
     android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:id="@+id/status"/>
    <Button
     android:layout_width="fill_parent" android:layout_height="wrap_content"
     android:text="@string/upload" android:onClick="startUpload"/>
  </LinearLayout>
</ScrollView>
